# feal

./: .gitignore  CMakeLists.txt  README.md
cmake/config/: FealConfig.cmake.in
include/feal/common/: constant.h
include/feal/mesh/: cell_data.h  entity.h  mesh.h  point.h  point_entity.h  segment_entity.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/mesh/: CMakeLists.txt  entity.cpp
test/: CMakeLists.txt
test/mesh/: CMakeLists.txt  test.cpp
